-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.10
-
None
-
Linux Elina
-
-
639bd92682f5f61f15f97f78ccd9791bec852b6c (qt/qtwayland/dev) 1a4545f9a5f2ecac9dc7d9ce1ebd8c6b47b37907 (qt/qtwayland/6.2) 43d858aaea1c3a8834647ecafe37ce8f47e90cb3 (qt/qtwayland/6.1) 36060ad8dca6720c77dfa2bf0292978d4eadb2db (qt/tqtc-qtwayland/5.15)
QWaylandShell surface is empty when the gst-launch streams video to it on the Elina Linux. All works OK with Weston.
Reproducing steps:
- Compile the minimal-qml compositor, copy to the target and launch it by run-compositor.sh script
- Copy a test video (1920x1080 h264) and the run-client-test.sh script to the same directory in the target
- Start gst-launch streaming by the run-client-test.sh
- Add in the minimal-qml GUI a new Wayland surface
Expected results: A surface is created and the video is displayed on the surface
Actual result: An empty surface is created
NOTE: If the Weston used as a compositor instead of the minimal-qml, the video is displayed successfully on the surface. The GStreamer version is 1.8.3.
gst_log_client.7z
- debug log from connected to minimal-qml gst client
compositor_qt.txt
- terminal log of minimal-qml compositor
client_qt.txt
- terminal log from connected to minimal-qml gst client
gst_log_client_weston.7z
- debug log from connected to Weston gst client
client_weston.txt
- terminal log from connected to Weston gst client
- mentioned in
-
Page Loading...