Implement wp_viewporter support for video buffer formats

Some EGL image formats (the YUV formats specifically) cannot
be handled by the built-in node types in the Qt Quick scene
graph and use a custom material and geometry setup.

In this setup, the wp_viewporter source rectangle was ignored
and the entire texture was always sampled. This caused problems
e.g. for video frames supplied by GStreamer.

[ChangeLog][Extensions] Support for wp_viewporter extended to
cover less common buffer formats.

Task-number: QTBUG-95464
Change-Id: I2504c6cd7d82e17d28e930a59d9ec71b25779acb
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
(cherry picked from commit 060024e2fc9335d4fc999253c9d6ed560c7ffb0c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>